--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,13 +3,49 @@
   padding: 0;
   margin: 0;
 }
-/* body {
-  background-color: black;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-} */
+
 .mainPicture {
   width: 100%;
-  height: 100%;
+  height: 100vh;
+}
+.sun {
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.planetOrbits {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border: 1px dashed rgba(255, 255, 255, 0.7);
+  border-radius: 50%;
+  transform-origin: center;
+}
+.orbit {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+@keyframes circle {
+  from {
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
+  to {
+    transform: translate(-50%, -50%) rotate(360deg);
+  }
+}
+
+@keyframes planetrotate {
+  from {
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
+  to {
+    transform: translate(-50%, -50%) rotate(360deg);
+  }
 }
